<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >


    <Button
        android:id="@+id/btn_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:text="@string/btn_label_toast"
        android:textColor="@android:color/white"
        android:onClick="showToast"/>

    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Count_initial_value"
        android:textSize="@dimen/count_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:background="@color/mybackground_color"
        android:gravity="center"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <Button
        android:id="@+id/btn_count"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:text="@string/btn_label_count"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:onClick="countUp"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:text="@string/btn_label_minus"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:onClick="countDown"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/label_reset"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:onClick="resetnumber"
        android:gravity="center"/>

</LinearLayout>